# ft_printf

./: .gitignore  .print_xx.c.swp  CMakeLists.txt  Makefile  a.out  ft_isdigit.c  ft_itoa.c  ft_itoa_p.c  ft_printf.c  ft_printf.h  ft_printf.h.gch  ft_putchar.c  ft_strlen.c  itoa_dd.c  itoa_for_xx.c  itoa_u.c  lib_ft_printf.h  main.c  parser.c  print_c.c  print_dd.c  print_p.c  print_prec.c  print_s.c  print_u.c  print_xX.c
includes/: lib_printf.h
srs/: print_c.c  print_d.c  print_dd.c  print_p.c  print_prec.c  print_s.c  print_u.c  print_xX.c
srs/part_of_lib/: ft_isdigit.c  ft_itoa.c  ft_itoa_p.c  ft_putchar.c  ft_strlen.c  itoa_dd.c  itoa_u.c
